// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme openapi inspect > feature reports > should generate a report for '@readme/oas-examples/3.0/json/readme.…' (w/ [ 'polymorphism' ]) 1`] = `
"
polymorphism:
 · #/components/responses/authForbidden/content/application~1json/schema
 · #/components/responses/authUnauthorized/content/application~1json/schema
 · #/components/schemas/docSchemaPost
 · #/components/schemas/error_APIKEY_EMPTY
 · #/components/schemas/error_APIKEY_MISMATCH
 · #/components/schemas/error_APIKEY_NOTFOUND
 · #/components/schemas/error_APPLY_INVALID_EMAIL
 · #/components/schemas/error_APPLY_INVALID_JOB
 · #/components/schemas/error_APPLY_INVALID_NAME
 · #/components/schemas/error_CATEGORY_INVALID
 · #/components/schemas/error_CATEGORY_NOTFOUND
 · #/components/schemas/error_CHANGELOG_INVALID
 · #/components/schemas/error_CHANGELOG_NOTFOUND
 · #/components/schemas/error_CUSTOMPAGE_INVALID
 · #/components/schemas/error_CUSTOMPAGE_NOTFOUND
 · #/components/schemas/error_DOC_INVALID
 · #/components/schemas/error_DOC_NOTFOUND
 · #/components/schemas/error_ENDPOINT_NOTFOUND
 · #/components/schemas/error_INTERNAL_ERROR
 · #/components/schemas/error_PROJECT_NEEDSSTAGING
 · #/components/schemas/error_PROJECT_NOTFOUND
 · #/components/schemas/error_RATE_LIMITED
 · #/components/schemas/error_REGISTRY_INVALID
 · #/components/schemas/error_REGISTRY_NOTFOUND
 · #/components/schemas/error_SPEC_FILE_EMPTY
 · #/components/schemas/error_SPEC_ID_DUPLICATE
 · #/components/schemas/error_SPEC_ID_INVALID
 · #/components/schemas/error_SPEC_INVALID
 · #/components/schemas/error_SPEC_INVALID_SCHEMA
 · #/components/schemas/error_SPEC_NOTFOUND
 · #/components/schemas/error_SPEC_TIMEOUT
 · #/components/schemas/error_SPEC_VERSION_NOTFOUND
 · #/components/schemas/error_UNEXPECTED_ERROR
 · #/components/schemas/error_VERSION_CANT_DEMOTE_STABLE
 · #/components/schemas/error_VERSION_CANT_REMOVE_STABLE
 · #/components/schemas/error_VERSION_DUPLICATE
 · #/components/schemas/error_VERSION_EMPTY
 · #/components/schemas/error_VERSION_FORK_EMPTY
 · #/components/schemas/error_VERSION_FORK_NOTFOUND
 · #/components/schemas/error_VERSION_INVALID
 · #/components/schemas/error_VERSION_NOTFOUND
 · #/paths/~1api-specification/post/responses/400/content/application~1json/schema
 · #/paths/~1api-specification~1{id}/put/responses/400/content/application~1json/schema
 · #/paths/~1categories/post/requestBody/content/application~1json/schema
 · #/paths/~1version/post/responses/400/content/application~1json/schema"
`;

exports[`rdme openapi inspect > feature reports > should generate a report for '@readme/oas-examples/3.0/json/readme-…' (w/ [ 'readme' ]) 1`] = `
[SoftError: 
x-default: You do not use this.
x-readme.code-samples:
 · #/paths/~1x-code-samples/get/x-code-samples
 · #/paths/~1x-code-samples/post/x-readme/code-samples

x-readme.headers:
 · #/paths/~1x-headers/patch/x-headers
 · #/paths/~1x-headers/post/x-readme/headers

x-readme.explorer-enabled:
 · #/paths/~1x-explorer-enabled/patch
 · #/paths/~1x-explorer-enabled/post

x-readme.proxy-enabled:
 · #/paths/~1x-proxy-enabled/patch
 · #/paths/~1x-proxy-enabled/post

x-readme.samples-languages:
 · node
 · python
 · shell
 · swift]
`;

exports[`rdme openapi inspect > feature reports > should generate a report for '@readme/oas-examples/3.0/json/schema-…' (w/ [ 'additionalProperties', …(1) ]) 1`] = `
"
additionalProperties:
 · #/components/schemas/BodyPart/properties/headers/additionalProperties
 · #/components/schemas/BodyPart/properties/mediaType/properties/parameters/additionalProperties
 · #/components/schemas/BodyPart/properties/parameterizedHeaders/additionalProperties
 · #/components/schemas/ContentDisposition/properties/parameters/additionalProperties
 · #/components/schemas/FormDataBodyPart/properties/headers/additionalProperties
 · #/components/schemas/FormDataBodyPart/properties/mediaType/properties/parameters/additionalProperties
 · #/components/schemas/FormDataBodyPart/properties/parameterizedHeaders/additionalProperties
 · #/components/schemas/FormDataContentDisposition/properties/parameters/additionalProperties
 · #/components/schemas/MultiPart/properties/headers/additionalProperties
 · #/components/schemas/MultiPart/properties/mediaType/properties/parameters/additionalProperties
 · #/components/schemas/MultiPart/properties/parameterizedHeaders/additionalProperties
 · #/components/schemas/ParameterizedHeader/properties/parameters/additionalProperties

circularRefs:
 · #/components/schemas/MultiPart/properties/parent
 · #/components/schemas/ZoneOffset/properties/rules"
`;

exports[`rdme openapi inspect > feature reports > should generate a report for '@readme/oas-examples/3.0/json/schema-…' (w/ [ 'additionalProperties', …(2) ]) 1`] = `
[SoftError: 
additionalProperties:
 · #/components/schemas/BodyPart/properties/headers/additionalProperties
 · #/components/schemas/BodyPart/properties/mediaType/properties/parameters/additionalProperties
 · #/components/schemas/BodyPart/properties/parameterizedHeaders/additionalProperties
 · #/components/schemas/ContentDisposition/properties/parameters/additionalProperties
 · #/components/schemas/FormDataBodyPart/properties/headers/additionalProperties
 · #/components/schemas/FormDataBodyPart/properties/mediaType/properties/parameters/additionalProperties
 · #/components/schemas/FormDataBodyPart/properties/parameterizedHeaders/additionalProperties
 · #/components/schemas/FormDataContentDisposition/properties/parameters/additionalProperties
 · #/components/schemas/MultiPart/properties/headers/additionalProperties
 · #/components/schemas/MultiPart/properties/mediaType/properties/parameters/additionalProperties
 · #/components/schemas/MultiPart/properties/parameterizedHeaders/additionalProperties
 · #/components/schemas/ParameterizedHeader/properties/parameters/additionalProperties

circularRefs:
 · #/components/schemas/MultiPart/properties/parent
 · #/components/schemas/ZoneOffset/properties/rules

x-default: You do not use this.
x-readme.code-samples: You do not use this.
x-readme.headers: You do not use this.
x-readme.explorer-enabled: You do not use this.
x-readme.proxy-enabled: You do not use this.
x-readme.samples-languages: You do not use this.]
`;

exports[`rdme openapi inspect > feature reports > should generate a report for '@readme/oas-examples/3.0/json/schema-…' (w/ [ 'circularRefs', 'readme' ]) 1`] = `
[SoftError: 
circularRefs:
 · #/components/schemas/MultiPart/properties/parent
 · #/components/schemas/ZoneOffset/properties/rules

x-default: You do not use this.
x-readme.code-samples: You do not use this.
x-readme.headers: You do not use this.
x-readme.explorer-enabled: You do not use this.
x-readme.proxy-enabled: You do not use this.
x-readme.samples-languages: You do not use this.]
`;

exports[`rdme openapi inspect > feature reports > should generate a report for '@readme/oas-examples/3.1/json/train-t…' (w/ [ 'commonParameters' ]) 1`] = `
"
commonParameters:
 · #/paths/~1bookings~1{bookingId}/parameters
 · #/paths/~1bookings~1{bookingId}~1payment/parameters"
`;

exports[`rdme openapi inspect > feature reports > should throw an error if an invalid feature is supplied 1`] = `
{
  "error": [Error: Expected --feature=reamde to be one of: additionalProperties, callbacks, circularRefs, commonParameters, discriminators, links, style, polymorphism, serverVariables, webhooks, xml, readme
See more help with --help],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme openapi inspect > full reports > should generate a report for @readme/oas-examples/3.0/json/petstore.json 1`] = `
"Here are some interesting things we found in your API definition. 🕵️

 · You are using 4 media types throughout your API: application/json, application/x-www-form-urlencoded, application/xml, and multipart/form-data
 · You have a total of 20 operations in your API.
 · You are using 2 security types throughout your API: apiKey and oauth2

🌲 OpenAPI Features
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ additionalProperties       │ 🟢    │ additionalProperties allows you to document dictionaries where the keys are      │
│                            │       │ user-supplied strings.                                                           │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#schema- │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ callbacks                  │ 🔴    │ Callbacks are asynchronous, out-of-band requests that your service will send to  │
│                            │       │ some other service in response to certain events.                                │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#callback-object                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ circularRefs               │ 🔴    │ Circular references are $ref pointers that at some point in their lineage        │
│                            │       │ reference themselves.                                                            │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ commonParameters           │ 🔴    │ Common parameters allow you to define parameters that are shared across multiple │
│                            │       │ operations within your API.                                                      │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#path-   │
│                            │       │ item-object                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ discriminators             │ 🔴    │ With schemas that can be, or contain, different shapes, discriminators help you  │
│                            │       │ assist your users in identifying and determining the kind of shape they can      │
│                            │       │ supply or receive.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#discriminator-object                                                          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ links                      │ 🔴    │ Links allow you to define at call-time relationships to other operations within  │
│                            │       │ your API.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#link-   │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ style                      │ 🔴    │ Parameter serialization (style) allows you to describe how the parameter should  │
│                            │       │ be sent to your API.                                                             │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#parameter-style                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ polymorphism               │ 🔴    │ Polymorphism (allOf, oneOf, and anyOf) allow you to describe schemas that may    │
│                            │       │ contain either many different shapes, or a single shape containing multiple      │
│                            │       │ different schemas.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#schema- │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ serverVariables            │ 🔴    │ Server variables allow to do user-supplied variable subsitituions within your    │
│                            │       │ API server URL.                                                                  │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#server- │
│                            │       │ variable-object                                                                  │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ webhooks                   │ 🔴    │ Webhooks allow you to describe out of band requests that may be initiated by     │
│                            │       │ your users.                                                                      │
│                            │       │                                                                                  │
│                            │       │ This feature is not available on OpenAPI v3.0.                                   │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ xml                        │ 🟢    │ Any parameter and/or request body that accepts XML or responses that return XML  │
│                            │       │ payloads.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#xml-    │
│                            │       │ object                                                                           │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘

🦉 ReadMe-Specific Features and Extensions
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-default                  │ 🔴    │ The x-default extension allows you to define static authentication credential    │
│                            │       │ defaults for OAuth 2 and API Key security types.                                 │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#authentication-defaults     │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.code-samples      │ 🔴    │ The x-readme.code-samples extension allows you to custom, create static code     │
│                            │       │ samples on your API documentation.                                               │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#custom-code-samples         │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.headers           │ 🔴    │ The x-readme.headers extension allows you define headers that should always be   │
│                            │       │ present on your API or a specific operation, as well as what its value should    │
│                            │       │ be.                                                                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#static-headers              │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.explorer-enabled  │ 🔴    │ The x-readme.explorer-enabled extension allows you to toggle your API            │
│                            │       │ documentation being interactive or not.                                          │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#disable-the-api-explorer    │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.proxy-enabled     │ 🔴    │ The x-readme.proxy-enabled extension allows you to toggle if API requests from   │
│                            │       │ API documentation should be routed through ReadMe's CORS Proxy. You should only  │
│                            │       │ need to use this if your API does not support CORS.                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#cors-proxy-enabled          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.samples-languages │ 🔴    │ The x-readme.samples-languages extension allows you to toggle what languages are │
│                            │       │ shown by default for code snippets in your API documentation.                    │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#code-sample-languages       │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`rdme openapi inspect > full reports > should generate a report for @readme/oas-examples/3.0/json/readme.json 1`] = `
"Here are some interesting things we found in your API definition. 🕵️

 · You are using 2 media types throughout your API: application/json and multipart/form-data
 · You have a total of 36 operations in your API.
 · You are using a single security type throughout your API: http

🌲 OpenAPI Features
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ additionalProperties       │ 🟢    │ additionalProperties allows you to document dictionaries where the keys are      │
│                            │       │ user-supplied strings.                                                           │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#schema- │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ callbacks                  │ 🔴    │ Callbacks are asynchronous, out-of-band requests that your service will send to  │
│                            │       │ some other service in response to certain events.                                │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#callback-object                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ circularRefs               │ 🔴    │ Circular references are $ref pointers that at some point in their lineage        │
│                            │       │ reference themselves.                                                            │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ commonParameters           │ 🔴    │ Common parameters allow you to define parameters that are shared across multiple │
│                            │       │ operations within your API.                                                      │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#path-   │
│                            │       │ item-object                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ discriminators             │ 🔴    │ With schemas that can be, or contain, different shapes, discriminators help you  │
│                            │       │ assist your users in identifying and determining the kind of shape they can      │
│                            │       │ supply or receive.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#discriminator-object                                                          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ links                      │ 🔴    │ Links allow you to define at call-time relationships to other operations within  │
│                            │       │ your API.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#link-   │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ style                      │ 🔴    │ Parameter serialization (style) allows you to describe how the parameter should  │
│                            │       │ be sent to your API.                                                             │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#parameter-style                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ polymorphism               │ 🟢    │ Polymorphism (allOf, oneOf, and anyOf) allow you to describe schemas that may    │
│                            │       │ contain either many different shapes, or a single shape containing multiple      │
│                            │       │ different schemas.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#schema- │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ serverVariables            │ 🔴    │ Server variables allow to do user-supplied variable subsitituions within your    │
│                            │       │ API server URL.                                                                  │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#server- │
│                            │       │ variable-object                                                                  │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ webhooks                   │ 🔴    │ Webhooks allow you to describe out of band requests that may be initiated by     │
│                            │       │ your users.                                                                      │
│                            │       │                                                                                  │
│                            │       │ This feature is not available on OpenAPI v3.0.                                   │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ xml                        │ 🔴    │ Any parameter and/or request body that accepts XML or responses that return XML  │
│                            │       │ payloads.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#xml-    │
│                            │       │ object                                                                           │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘

🦉 ReadMe-Specific Features and Extensions
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-default                  │ 🔴    │ The x-default extension allows you to define static authentication credential    │
│                            │       │ defaults for OAuth 2 and API Key security types.                                 │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#authentication-defaults     │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.code-samples      │ 🔴    │ The x-readme.code-samples extension allows you to custom, create static code     │
│                            │       │ samples on your API documentation.                                               │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#custom-code-samples         │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.headers           │ 🔴    │ The x-readme.headers extension allows you define headers that should always be   │
│                            │       │ present on your API or a specific operation, as well as what its value should    │
│                            │       │ be.                                                                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#static-headers              │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.explorer-enabled  │ 🔴    │ The x-readme.explorer-enabled extension allows you to toggle your API            │
│                            │       │ documentation being interactive or not.                                          │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#disable-the-api-explorer    │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.proxy-enabled     │ 🔴    │ The x-readme.proxy-enabled extension allows you to toggle if API requests from   │
│                            │       │ API documentation should be routed through ReadMe's CORS Proxy. You should only  │
│                            │       │ need to use this if your API does not support CORS.                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#cors-proxy-enabled          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.samples-languages │ 🔴    │ The x-readme.samples-languages extension allows you to toggle what languages are │
│                            │       │ shown by default for code snippets in your API documentation.                    │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#code-sample-languages       │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`rdme openapi inspect > full reports > should generate a report for @readme/oas-examples/3.0/json/readme-extensions.json 1`] = `
"Here are some interesting things we found in your API definition. 🕵️

 · You are using a single media type throughout your API: application/json
 · You have a total of 12 operations in your API.
 · You are using a single security type throughout your API: oauth2

🌲 OpenAPI Features
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ additionalProperties       │ 🔴    │ additionalProperties allows you to document dictionaries where the keys are      │
│                            │       │ user-supplied strings.                                                           │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#schema- │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ callbacks                  │ 🔴    │ Callbacks are asynchronous, out-of-band requests that your service will send to  │
│                            │       │ some other service in response to certain events.                                │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#callback-object                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ circularRefs               │ 🔴    │ Circular references are $ref pointers that at some point in their lineage        │
│                            │       │ reference themselves.                                                            │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ commonParameters           │ 🔴    │ Common parameters allow you to define parameters that are shared across multiple │
│                            │       │ operations within your API.                                                      │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#path-   │
│                            │       │ item-object                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ discriminators             │ 🔴    │ With schemas that can be, or contain, different shapes, discriminators help you  │
│                            │       │ assist your users in identifying and determining the kind of shape they can      │
│                            │       │ supply or receive.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#discriminator-object                                                          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ links                      │ 🔴    │ Links allow you to define at call-time relationships to other operations within  │
│                            │       │ your API.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#link-   │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ style                      │ 🔴    │ Parameter serialization (style) allows you to describe how the parameter should  │
│                            │       │ be sent to your API.                                                             │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.           │
│                            │       │ md#parameter-style                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ polymorphism               │ 🔴    │ Polymorphism (allOf, oneOf, and anyOf) allow you to describe schemas that may    │
│                            │       │ contain either many different shapes, or a single shape containing multiple      │
│                            │       │ different schemas.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#schema- │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ serverVariables            │ 🔴    │ Server variables allow to do user-supplied variable subsitituions within your    │
│                            │       │ API server URL.                                                                  │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#server- │
│                            │       │ variable-object                                                                  │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ webhooks                   │ 🔴    │ Webhooks allow you to describe out of band requests that may be initiated by     │
│                            │       │ your users.                                                                      │
│                            │       │                                                                                  │
│                            │       │ This feature is not available on OpenAPI v3.0.                                   │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ xml                        │ 🔴    │ Any parameter and/or request body that accepts XML or responses that return XML  │
│                            │       │ payloads.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.4.md#xml-    │
│                            │       │ object                                                                           │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘

🦉 ReadMe-Specific Features and Extensions
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-default                  │ 🔴    │ The x-default extension allows you to define static authentication credential    │
│                            │       │ defaults for OAuth 2 and API Key security types.                                 │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#authentication-defaults     │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.code-samples      │ 🟢    │ The x-readme.code-samples extension allows you to custom, create static code     │
│                            │       │ samples on your API documentation.                                               │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#custom-code-samples         │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.headers           │ 🟢    │ The x-readme.headers extension allows you define headers that should always be   │
│                            │       │ present on your API or a specific operation, as well as what its value should    │
│                            │       │ be.                                                                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#static-headers              │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.explorer-enabled  │ 🟢    │ The x-readme.explorer-enabled extension allows you to toggle your API            │
│                            │       │ documentation being interactive or not.                                          │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#disable-the-api-explorer    │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.proxy-enabled     │ 🟢    │ The x-readme.proxy-enabled extension allows you to toggle if API requests from   │
│                            │       │ API documentation should be routed through ReadMe's CORS Proxy. You should only  │
│                            │       │ need to use this if your API does not support CORS.                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#cors-proxy-enabled          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.samples-languages │ 🟢    │ The x-readme.samples-languages extension allows you to toggle what languages are │
│                            │       │ shown by default for code snippets in your API documentation.                    │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#code-sample-languages       │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`rdme openapi inspect > full reports > should generate a report for @readme/oas-examples/3.1/json/train-travel.json 1`] = `
"Here are some interesting things we found in your API definition. 🕵️

 · You are using 2 media types throughout your API: application/json and application/xml
 · You have a total of 9 operations in your API.
 · You are using a single security type throughout your API: oauth2

🌲 OpenAPI Features
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ additionalProperties       │ 🔴    │ additionalProperties allows you to document dictionaries where the keys are      │
│                            │       │ user-supplied strings.                                                           │
│                            │       │                                                                                  │
│                            │       │ https://json-schema.org/understanding-json-schema/reference/object.              │
│                            │       │ html#additional-properties                                                       │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ callbacks                  │ 🔴    │ Callbacks are asynchronous, out-of-band requests that your service will send to  │
│                            │       │ some other service in response to certain events.                                │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.           │
│                            │       │ md#callback-object                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ circularRefs               │ 🔴    │ Circular references are $ref pointers that at some point in their lineage        │
│                            │       │ reference themselves.                                                            │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ commonParameters           │ 🟢    │ Common parameters allow you to define parameters that are shared across multiple │
│                            │       │ operations within your API.                                                      │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.md#path-   │
│                            │       │ item-object                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ discriminators             │ 🔴    │ With schemas that can be, or contain, different shapes, discriminators help you  │
│                            │       │ assist your users in identifying and determining the kind of shape they can      │
│                            │       │ supply or receive.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.           │
│                            │       │ md#discriminator-object                                                          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ links                      │ 🟢    │ Links allow you to define at call-time relationships to other operations within  │
│                            │       │ your API.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.md#link-   │
│                            │       │ object                                                                           │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ style                      │ 🔴    │ Parameter serialization (style) allows you to describe how the parameter should  │
│                            │       │ be sent to your API.                                                             │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.           │
│                            │       │ md#parameter-style                                                               │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ polymorphism               │ 🟢    │ Polymorphism (allOf, oneOf, and anyOf) allow you to describe schemas that may    │
│                            │       │ contain either many different shapes, or a single shape containing multiple      │
│                            │       │ different schemas.                                                               │
│                            │       │                                                                                  │
│                            │       │ https://json-schema.org/understanding-json-schema/reference/combining.html       │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ serverVariables            │ 🔴    │ Server variables allow to do user-supplied variable subsitituions within your    │
│                            │       │ API server URL.                                                                  │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.md#server- │
│                            │       │ variable-object                                                                  │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ webhooks                   │ 🟢    │ Webhooks allow you to describe out of band requests that may be initiated by     │
│                            │       │ your users.                                                                      │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.md#user-   │
│                            │       │ content-oaswebhooks                                                              │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ xml                        │ 🟢    │ Any parameter and/or request body that accepts XML or responses that return XML  │
│                            │       │ payloads.                                                                        │
│                            │       │                                                                                  │
│                            │       │ https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.1.1.md#xml-    │
│                            │       │ object                                                                           │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘

🦉 ReadMe-Specific Features and Extensions
┌────────────────────────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
│ Feature                    │ Used? │ Description                                                                      │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-default                  │ 🔴    │ The x-default extension allows you to define static authentication credential    │
│                            │       │ defaults for OAuth 2 and API Key security types.                                 │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#authentication-defaults     │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.code-samples      │ 🔴    │ The x-readme.code-samples extension allows you to custom, create static code     │
│                            │       │ samples on your API documentation.                                               │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#custom-code-samples         │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.headers           │ 🔴    │ The x-readme.headers extension allows you define headers that should always be   │
│                            │       │ present on your API or a specific operation, as well as what its value should    │
│                            │       │ be.                                                                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#static-headers              │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.explorer-enabled  │ 🔴    │ The x-readme.explorer-enabled extension allows you to toggle your API            │
│                            │       │ documentation being interactive or not.                                          │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#disable-the-api-explorer    │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.proxy-enabled     │ 🔴    │ The x-readme.proxy-enabled extension allows you to toggle if API requests from   │
│                            │       │ API documentation should be routed through ReadMe's CORS Proxy. You should only  │
│                            │       │ need to use this if your API does not support CORS.                              │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#cors-proxy-enabled          │
├────────────────────────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
│ x-readme.samples-languages │ 🔴    │ The x-readme.samples-languages extension allows you to toggle what languages are │
│                            │       │ shown by default for code snippets in your API documentation.                    │
│                            │       │                                                                                  │
│                            │       │ https://docs.readme.com/main/docs/openapi-extensions#code-sample-languages       │
└────────────────────────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
"
`;
